--- a/resources/css/media.css
+++ b/resources/css/media.css
@@ -34,19 +34,22 @@
     .product-info{padding: 0 35px 0 0px;}
     .product-info{width: 50%;}
     .product-img{width: 50%;}
+    .suggested-acc .pro-sm-img{    width: 320px;max-width: 90%;}
     
 }
 
 @media screen and (max-width:767px) {
     header  {padding-left:0px;}
+    header .header-rt ul.nav{display: none;}
+/*
     header .header-rt ul.nav{ -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
     overflow-y: hidden;}
+*/
     header .container   {position: relative;    padding: 15px;}
     .logo{position: absolute; left: 50%; top: 50%; margin-top: -17.5px; margin-left: -20px; width: 40px; }
     .logo img   {width: 100%; height: auto;}
-    .menu-btn{display: block; position: absolute; left: 15px; top: 15px; top: 15px; width: 25px; height: 25px; }
-    .menu-btn span{width: 100%; height: 4px; background: #000; border-radius: 3px; display: block; margin:6px 0;}
+    .menu-btn{display: block;}
     .breadcrum-link{display: none;}
     .sidebar{float: none; width: 100%;padding: 0px;}
     .inner-wrapper-sticky{height: auto;}
@@ -70,7 +73,8 @@
     .pro-discr-info{padding-right: 20px;}
     .pro-discr-img.full-width{min-height: 450px;}
     .download-img{bottom: auto; top: 0px;}
-   .suggested-acc .pro-discr-img.full-width   {min-height: 645px;}
+/*   .suggested-acc .pro-discr-img.full-width   {min-height: 645px;}*/
+   .suggested-acc .pro-discr-img.full-width figure  {min-height: 645px;}
     .hor-ttl{left: -145px;}
     .related-product h3{padding-bottom: 45px;}
     footer{margin: 0px; padding: 70px 0 40px;}
@@ -84,15 +88,23 @@
     .copyright {display: block;}
     .grab-newsletter{display: none;}
     .payment-methods{display: block;}
-    .nav{position: absolute; left: 0px; top: 100%;; width: 100%;  z-index: 999; background: #fff;}
+    .nav{position: fixed; left: 0px; top: 54px; width: 100%;  z-index: 999; background: #fff; height: calc(100vh - 54px);}
+/*
     header ul.nav > li:first-child{padding-top: 10px;}
     header ul.nav > li:last-child{padding-bottom: 20px;}
+*/
     header ul.nav > li {float: none; width: 100%; display: block; text-align: center; margin: 0 0 0; padding: 0px;}
     header ul.nav > li a   {padding: 15px; display: block;}
-    header{z-index: 99;}
+    header{z-index: 9999;}
     header ul.nav > li a.active {background: #ffd541}
     header ul.nav > li a.active:after {display:none;}
     header ul.nav > li a:hover:after {display:none;}
+    .fixed-header{position: fixed; left: 0px; width: 100%; }
+    .pro-discr-img figure{min-height: 350px; min-height: 10px; max-height: none;}
+    .review-list li .cust-profile{width: 100%;    padding: 0 0 18px;}
+    .review-list li .cust-comments{width: 100%;}
+    .review-list:after{width: 100%;}
+    .review-section{padding-right: 0px;}
     
     
 }
@@ -115,6 +127,7 @@
     .pro-discr-info{padding-right: 0px;}
     .pro-discr .pro-ttl{padding-right: 0px;}
     .dispatch-returen-policy ul li{width: 50%;}
+    .pro-discr.full-img-wrap{display: block;}
 }
 @media screen and (max-width:399px) {
     #side-nav li a{font-size: 1.1em; padding: 15px 5px}
@@ -122,4 +135,5 @@
     .product-info{padding: 0px;}
     .product-info .add-to-cart-btn{width: 130px;}
     .dispatch-returen-policy ul li{width:100%;}
+    .suggested-acc .pro-discr-img.full-width figure{    min-height: 500px;}
 }
